// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditsSettings component handles a read error 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <Blueprint3.Callout>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </Blueprint3.Callout>
  <br />
  <div
    className="contributors"
  />
</div>
`;

exports[`CreditsSettings component renders 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <Blueprint3.Callout>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </Blueprint3.Callout>
  <br />
  <div
    className="contributors"
  >
    <Blueprint3.Card
      className="contributor"
      elevation={2}
      interactive={true}
      key="felixrieseberg"
      onClick={[Function]}
    >
      <div
        className="header"
      >
        <img
          alt="avatar"
          className="avatar"
          src="https://avatars3.githubusercontent.com/u/1426799?v=4"
        />
        <div
          className="info"
        >
          <p
            className="name"
          >
            Felix Rieseberg
          </p>
          <p
            className="location"
          >
            📍 
            San Francisco
          </p>
        </div>
      </div>
      <p
        className="bio"
      >
        🙇 ✨🌳 
      </p>
    </Blueprint3.Card>
  </div>
</div>
`;

exports[`CreditsSettings component renders for contributors with less data 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <Blueprint3.Callout>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </Blueprint3.Callout>
  <br />
  <div
    className="contributors"
  >
    <Blueprint3.Card
      className="contributor"
      elevation={2}
      interactive={true}
      key="felixrieseberg"
      onClick={[Function]}
    >
      <div
        className="header"
      >
        <img
          alt="avatar"
          className="avatar"
          src="https://avatars3.githubusercontent.com/u/1426799?v=4"
        />
        <div
          className="info"
        >
          <p
            className="name"
          >
            felixrieseberg
          </p>
        </div>
      </div>
    </Blueprint3.Card>
  </div>
</div>
`;

exports[`CreditsSettings component renders nothing if we do not have contributors 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <Blueprint3.Callout>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </Blueprint3.Callout>
  <br />
  <div
    className="contributors"
  />
</div>
`;
